# hello_py

./: .env  README.md  main.py  pyproject.toml  walkthrough.md
boss/: decorator.py  grammar.py  singleton.py  tree.py
boss/leetcode/: __init__.py  list_code.py  process_threading.py  solution.py  str_code.py
celery_task/: README.md  celery_app.py  celery_ctl.sh  check_setup.py  main.py  redis_simple.py  tasks.py  test_integration.py  test_redis.py
kafka_poc/: consumer.py  kafka_client.py  producer.py
neo4j_poc/: neo4j.conf  neo4j_client.py
org/app/: FileController.py  index.py  webSocket.py
org/common/: ienums.py  ierrors.py  iexception.py  iresponse.py
org/dao/: __init__.py  doris.py  engine.py  mysql.py  pgsql.py
org/doris/: entities.py  service.py
org/example/: app.py  base_64.py  digango_api.py  tornado_api.py
org/models/: reqs.py  resps.py
org/mysql/: service.py
org/pgsql/: entities.py  service.py
org/service/: __init__.py
